--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
         </article>
     </div>
   </main>
+
+  <!-- NOTICIAS  -->
   <section class="container section_noticias p-5">     
     <div class="row ">  
         <h2 class="text-center pt-5 pb-5 fs-1 fw-bold">Noticias</h2>
