index y noticia terminado

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <!-- nav bar  -->
+  <!-- NAVBAR HEADER -->
 <header class="header">
     <nav class="navbar navbar-expand-sm navbar-light ">
       <div class="container-fluid">
@@ -75,7 +75,7 @@
 
   </div>
 
-  <!-- NOTICIAS -->
+  <!-- MAIN -->
 
 
   <main class="container main_rym pt-5 pb-5">
@@ -100,6 +100,7 @@
   </main>
 
   <!-- NOTICIAS  -->
+
   <section class="container section_noticias p-5">     
     <div class="row ">  
         <h2 class="text-center pt-5 pb-5 fs-1 fw-bold">Noticias</h2>
