index y noticias final

--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -45,7 +45,7 @@
   </nav>
 </header>  
 
-<section class="container section_noticias p-5 mb-5">     
+<section class="container section_noticias p-5 mb-5 mt-5">     
   <div class="row ">  
       <h2 class="text-center pt-5 pb-5 fs-1 fw-bold">Noticias</h2>
           <div class="col-md-4 pb-4" >
