--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -47,12 +47,41 @@
 
       <!-- SECTION -->
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      
+
     <section class="container section_noticias p-5 mb-5 mt-5">      
         <div class="row ">  
             <h2 class="text-center pt-5 pb-5 fs-1 fw-bold">Acerca de la Web</h2>
-                <div class="col-md-4 pb-4" >
+                <div class="col-md-12 pb-4" >
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque consequatur reprehenderit ullam modi, corrupti asperiores magnam fugit, ipsum quo soluta amet odio laudantium doloribus officiis numquam ad quibusdam nobis quod!</p>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque consequatur reprehenderit ullam modi, corrupti asperiores magnam fugit, ipsum quo soluta amet odio laudantium doloribus officiis numquam ad quibusdam nobis quod! .orem, ipsum dolor sit amet consectetur adipisicing elit. Cumque consequatur reprehenderit ullam modi, corrupti asperiores magnam fugit, ipsum quo soluta amet odio laudantium doloribus officiis numquam ad quibusdam nobis quod!</p>
+
                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque consequatur reprehenderit ullam modi, corrupti asperiores magnam fugit, ipsum quo soluta amet odio laudantium doloribus officiis numquam ad quibusdam nobis quod!</p>
                 </div> 
+                <div class="col-md-12 d-flex justify-content-center ">
+                  <img src="../images/pegatina-ricky-y-morti-portales.png" class="img-fluid" alt="...">
+
+                </div>
         </div>
     </section>    
       
