Se termino Galeria

--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -31,13 +31,13 @@
             <a class="nav-link " href="noticias.html">Noticias</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="pages/temporadas.html">Temporadas</a>
+            <a class="nav-link" href="temporadas.html">Temporadas</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link "href="pages/galeria.html" >Galeria</a>
+            <a class="nav-link "href="galeria.html" >Galeria</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="pages/acerca.html" >Acerca</a>
+            <a class="nav-link" href="acerca.html" >Acerca</a>
           </li>
         </ul>
       </div>
