bootstrap en todas las paginas

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <!-- NAVBAR HEADER -->
 <header class="header">
-    <nav class="navbar navbar-expand-sm navbar-light ">
+    <nav class="navbar navbar-expand-md navbar-light ">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"> <img src="images/logo15.png" class="rounded-pill" alt="" width="180">  </a>
         
@@ -32,6 +32,9 @@
             </li>
             <li class="nav-item ">
               <a class="nav-link" href="pages/temporadas.html">Temporadas</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link" href="pages/personajes.html">Personajes</a>
             </li>
             <li class="nav-item ">
               <a class="nav-link "href="pages/galeria.html" >Galeria</a>
@@ -76,7 +79,6 @@
   </div>
 
   <!-- MAIN -->
-
 
   <main class="container main_rym pt-5 pb-5">
     <div class="row justify-content-md-center">
@@ -178,16 +180,11 @@
             
           </div>
         </div>
-
-
     </div> 
-
-
   </section>
   
   <!-- FOOTER -->
 
-  
     <div id="footer" >
       <div class="container pb-5">
         <div class="row">
