--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -14,7 +14,7 @@
 
     <!-- nav bar  -->
     <header class="header">
-      <nav class="navbar navbar-expand-sm navbar-light ">
+      <nav class="navbar navbar-expand-md navbar-light ">
         <div class="container-fluid">
         <a class="navbar-brand" href="../index.html"> <img src="../images/logo15.png" class="rounded-pill" alt="" width="180">  </a>
       
@@ -32,6 +32,9 @@
           </li>
           <li class="nav-item ">
             <a class="nav-link" href="temporadas.html">Temporadas</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link" href="personajes.html">Personajes</a>
           </li>
           <li class="nav-item ">
             <a class="nav-link "href="galeria.html" >Galeria</a>
