--- a/index.html
+++ b/index.html
@@ -59,8 +59,13 @@
 
       </div>
       <div class="carousel-item ">
-        <img src="images/img4.jpg" class="d-block w-100" alt="">
+        <img src="images/rick20.jpg" class="d-block w-100" alt="">
       </div>
+
+    </div>
+    <div class="carousel-item ">
+      <img src="images/rick21.jpg" class="d-block w-100" alt="">
+    </div>
 
     </div>
   </div>
